--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
-title: Ben's Autoramas
+title: Bens-Autoramas
 email: bensautoramas@gmail.com
 description: >
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-url: "http://127.0.0.1:4000/" # the base hostname & protocol for your site
+url: "http://alphagedlor.github.io/Bens-Autorama" # the base hostname & protocol for your site
 # Build settings
-markdown: kramdown
