--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 # Site settings
 title: Bens-Autoramas
 email: bensautoramas@gmail.com
-description: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Write an awesome description for your new site here.
 url: "http://alphagedlor.github.io/Bens-Autorama" # the base hostname & protocol for your site
 # Build settings
