--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@
 title: Bens-Autoramas
 email: bensautoramas@gmail.com
 description: Write an awesome description for your new site here.
-url: "http://alphagedlor.github.io/Bens-Autorama/" # the base hostname & protocol for your site
+url: "http://127.0.0.1:4000/" # the base hostname & protocol for your site
 # Build settings
